--- a/css/main.css
+++ b/css/main.css
@@ -47,11 +47,27 @@ img {
 }
 
 .container {
-  width: 1440px;
-  padding-left: 156px;
-  padding-right: 156px;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 428px) {
+  .container {
+    width: 428px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .container {
+    width: 1440px;
+    padding-left: 156px;
+    padding-right: 156px;
+  }
 }
 
 .button {
@@ -670,17 +686,17 @@ img {
   letter-spacing: 0.02em;
 }
 
-.portfolio__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+@media screen and (min-width: 768px) {
+  .portfolio__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .portfolio__item {
-  width: 360px;
-  margin-right: 24px;
   margin-bottom: 48px;
   -webkit-transition: -webkit-box-shadow var(--anim-fast);
   transition: -webkit-box-shadow var(--anim-fast);
@@ -691,11 +707,28 @@ img {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.portfolio__item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    width: 45%;
+    margin-right: 24px;
+    margin-bottom: 72px;
+  }
 }
-.portfolio__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
+@media screen and (min-width: 1440px) {
+  .portfolio__item {
+    width: 30%;
+    margin-bottom: 48px;
+  }
+}
+@media screen and (max-width: 1439px) {
+  .portfolio__item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .portfolio__item:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
 .portfolio__thumb {
