--- a/saas/components/_portfolio.scss
+++ b/saas/components/_portfolio.scss
@@ -20,13 +20,13 @@
 }
 
 .portfolio__list {
-  display: flex;
-  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .portfolio__item {
-  width: 360px;
-  margin-right: 24px;
   margin-bottom: 48px;
   transition: box-shadow var(--anim-fast);
 
@@ -36,12 +36,26 @@
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 
-  &:nth-child(3n) {
-    margin-right: 0;
+  @media screen and (min-width: 768px) {
+    width: 45%;
+    margin-right: 24px;
+    margin-bottom: 72px;
+  }
+  @media screen and (min-width: 1440px) {
+    width: 30%;
+    margin-bottom: 48px;
   }
 
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  &:nth-child(2n) {
+    @media screen and (max-width: 1439px) {
+      margin-right: 0;
+    }
+  }
+
+  &:nth-child(3n) {
+    @media screen and (min-width: 1440px) {
+      margin-right: 0;
+    }
   }
 }
 
