--- a/css/main.css
+++ b/css/main.css
@@ -690,6 +690,11 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
 }
+@media screen and (min-width: 768px) {
+  .footer__form__field {
+    width: 264px;
+  }
+}
 .footer__form__field::-webkit-input-placeholder {
   font-size: 16px;
   color: rgba(255, 255, 255, 0.6);
@@ -815,23 +820,23 @@ img {
 }
 @media screen and (min-width: 768px) {
   .portfolio__item {
-    width: 356px;
+    width: calc((100% - 24px) / 2);
     margin-right: 24px;
     margin-bottom: 72px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   .portfolio__item {
-    width: 360px;
+    width: calc((100% - 48px) / 3);
     margin-bottom: 48px;
   }
 }
-@media screen and (max-width: 1439px) {
+@media screen and (max-width: 1199px) {
   .portfolio__item:nth-child(2n) {
     margin-right: 0;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   .portfolio__item:nth-child(3n) {
     margin-right: 0;
   }
@@ -884,19 +889,24 @@ img {
           transform: translateY(0);
 }
 
+.portolio__flex__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 24px;
+  margin-bottom: 48px;
+}
 @media screen and (min-width: 768px) {
   .portolio__flex__btn {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 24px;
     margin-bottom: 64px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   .portolio__flex__btn {
     margin-bottom: 72px;
   }
