--- a/saas/components/_footer.scss
+++ b/saas/components/_footer.scss
@@ -118,6 +118,10 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
 
+  @media screen and (min-width: 768px) {
+    width: 264px;
+  }
+
   &::placeholder {
     font-size: 16px;
     color: rgba(255, 255, 255, 0.6);
