--- a/saas/components/_portfolio.scss
+++ b/saas/components/_portfolio.scss
@@ -38,23 +38,23 @@
   }
 
   @media screen and (min-width: 768px) {
-    width: 356px;
+    width: calc((100% - 24px) / 2);
     margin-right: 24px;
     margin-bottom: 72px;
   }
-  @media screen and (min-width: 1440px) {
-    width: 360px;
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 48px) / 3);
     margin-bottom: 48px;
   }
 
   &:nth-child(2n) {
-    @media screen and (max-width: 1439px) {
+    @media screen and (max-width: 1199px) {
       margin-right: 0;
     }
   }
 
   &:nth-child(3n) {
-    @media screen and (min-width: 1440px) {
+    @media screen and (min-width: 1200px) {
       margin-right: 0;
     }
   }
@@ -96,13 +96,16 @@
 }
 
 .portolio__flex__btn {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin-bottom: 48px;
+
   @media screen and (min-width: 768px) {
-    display: flex;
-    gap: 24px;
     margin-bottom: 64px;
     justify-content: center;
   }
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 72px;
   }
 }
